--- a/index.html
+++ b/index.html
@@ -38,7 +38,8 @@
 
     <section class="about">
         <div class="left">
-            <img src="/man.png" class="man">
+            <img src="man.png" class="man">
+           
         </div>
         <div class="rigth" id="rigth">
             <h3>Who i am?</h3>
@@ -63,19 +64,19 @@
         </div>
         <div class="Portfolio">
             <div class="portfolio1" id="p" >
-               <a href="https://alite1008.github.io/Calculator/"><img src="/calu.png" alt="" class="pimg" ></a> 
+               <a href="https://alite1008.github.io/Calculator/"><img src="calu.png" alt="" class="pimg" ></a> 
                 <div class="pot1">
                     <h2><a href="https://alite1008.github.io/Calculator/">Calculator</a></h2>
                 </div>
             </div>
             <div class="portfolio2" id="p">
-                <a href="https://alite1008.github.io/Currency-Converter/"><img src="/cur.png" alt="" class="pimg"></a>
+                <a href="https://alite1008.github.io/Currency-Converter/"><img src="cur.png" alt="" class="pimg"></a>
                 <div class="pot1">
                     <a href="https://alite1008.github.io/Currency-Converter/"><h2>Currency Converter</h2></a>
                 </div>
             </div>
             <div class="portfolio3" id="p">
-                <a href="https://alite1008.github.io/landing-page/"><img src="/landingpage.png" alt="" class="pimg"></a>
+                <a href="https://alite1008.github.io/landing-page/"><img src="landingpage.png" alt="" class="pimg"></a>
                 <div class="pot1">
                     <a href="https://alite1008.github.io/landing-page/"><h2>Landing Page</h2></a>
                 </div>
