--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
             <div class="portfolio1" id="p" >
                <a href="https://alite1008.github.io/Calculator/"><img src="calu.png" alt="" class="pimg" ></a> 
                 <div class="pot1">
-                    <h2><a href="https://alite1008.github.io/Calculator/">Calculator</a></h2>
+                    <h2 class="sub"><a href="https://alite1008.github.io/Calculator/">Calculator</a></h2>
                 </div>
             </div>
             <div class="portfolio2" id="p">
