--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins&family=Signika+Negative:wght@700&display=swap"
         rel="stylesheet">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">   
 
 </head>
 
@@ -17,13 +18,13 @@
     <nav>
         <div class="divnav">
             <div class="navt">
-                <li class="logo">Vedant's Portfolio</li>
+                <li class="logo" class="li">Vedant's Portfolio</li>
             </div>
             <div class="navl">
-                <li><a href="#">Home</a></li>
-                <li><a href="#rigth">About</a></li>
-                <li><a href="#pi">Portfolio</a></li>
-                <li><a href="#nameinput">Contact</a></li>
+                <li class="li"><a href="#" class="a">Home</a></li>
+                <li class="li"><a href="#rigth" class="a">About</a></li>
+                <li class="li"><a href="#pi" class="a">Portfolio</a></li>
+                <li class="li"><a href="#nameinput" class="a">Contact</a></li>
             </div>
         </div>
     </nav>
@@ -103,6 +104,18 @@
         </div>
     </section>
 
+    <section class="sec">
+        <div class="soc">
+            <a href="#"  class="fa fa-instagram"></a>
+        </div>
+        <div class="soc">
+            <a href="#" class="fa fa-facebook"></a>
+        </div>
+        <div class="soc">
+            <a href="#" class="fa fa-linkedin"></a>
+        </div>
+       
+    </section>
     </body>
 
 </html>
