--- a/index.html
+++ b/index.html
@@ -67,19 +67,19 @@
             <div class="portfolio1" id="p" >
                <a href="https://alite1008.github.io/Calculator/"><img src="calu.png" alt="" class="pimg" ></a> 
                 <div class="pot1">
-                    <h2 class="sub"><a href="https://alite1008.github.io/Calculator/">Calculator</a></h2>
+                    <a href="https://alite1008.github.io/Calculator/"><h2 class="sub">Calculator</h2></a>
                 </div>
             </div>
             <div class="portfolio2" id="p">
                 <a href="https://alite1008.github.io/Currency-Converter/"><img src="cur.png" alt="" class="pimg"></a>
                 <div class="pot1">
-                    <a href="https://alite1008.github.io/Currency-Converter/"><h2>Currency Converter</h2></a>
+                    <a href="https://alite1008.github.io/Currency-Converter/"><h2 class="sub">Currency Converter</h2></a>
                 </div>
             </div>
             <div class="portfolio3" id="p">
                 <a href="https://alite1008.github.io/landing-page/"><img src="landingpage.png" alt="" class="pimg"></a>
                 <div class="pot1">
-                    <a href="https://alite1008.github.io/landing-page/"><h2>Landing Page</h2></a>
+                    <a href="https://alite1008.github.io/landing-page/"><h2 class="sub">Landing Page</h2></a>
                 </div>
             </div>
 
@@ -106,13 +106,15 @@
 
     <section class="sec">
         <div class="soc">
-            <a href="#"  class="fa fa-instagram"></a>
+            <a href="https://instagram.com/v_vedant_n?igshid=OGQ5ZDc2ODk2ZA==" 
+             class="fa fa-instagram"></a>
         </div>
         <div class="soc">
             <a href="#" class="fa fa-facebook"></a>
         </div>
         <div class="soc">
-            <a href="#" class="fa fa-linkedin"></a>
+            <a href="https://www.linkedin.com/in/vedant-navale-062067257?lipi=urn%3Ali%3Apage%3Ad_flagship3_profile_view_base_contact_details%3Bv1l%2Fa68VRuGg48cgHBRvTg%3D%3D"
+             class="fa fa-linkedin"></a>
         </div>
        
     </section>
