--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <div class="rigth" id="rigth">
             <h3>Who i am?</h3>
             <h2>About me</h2>
-            <p> There are many people living in world having different personalities. This is the personality which
+            <p class="aboutmep"> There are many people living in world having different personalities. This is the personality which
                 makes everyone unique and different from others. We can never see two people of exactly same
                 personality. It never changes and decided the quality of a person. I am taking the example of me. I am
                 so special in this world and have unique personality than others. I am very responsible and sympathetic
